--- a/test/Census API Examples.ipynb
+++ b/test/Census API Examples.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -523,7 +523,7 @@
        "+-------------------------+--------------------------------------------------------------+"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -583,7 +583,7 @@
        "+-------------+-----------------------------------------------------------------------------+"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -650,7 +650,7 @@
        "+-------------+----------------------------------------------------------+------------------------------------+----------+----------+"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -696,13 +696,112 @@
        "+---------+----------------------------------------------------------+------------------------------------+----------+----------+"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ds.search_variables('population','FIPS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PLACE</th>\n",
+       "      <th>GEONAME</th>\n",
+       "      <th>POP</th>\n",
+       "      <th>state</th>\n",
+       "      <th>county</th>\n",
+       "      <th>place</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11194</td>\n",
+       "      <td>Carlsbad city, San Diego County, California, P...</td>\n",
+       "      <td>113453</td>\n",
+       "      <td>06</td>\n",
+       "      <td>073</td>\n",
+       "      <td>11194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>13392</td>\n",
+       "      <td>Chula Vista city, San Diego County, California...</td>\n",
+       "      <td>265757</td>\n",
+       "      <td>06</td>\n",
+       "      <td>073</td>\n",
+       "      <td>13392</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16378</td>\n",
+       "      <td>Coronado city, San Diego County, California, P...</td>\n",
+       "      <td>24812</td>\n",
+       "      <td>06</td>\n",
+       "      <td>073</td>\n",
+       "      <td>16378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18506</td>\n",
+       "      <td>Del Mar city, San Diego County, California, Pa...</td>\n",
+       "      <td>4351</td>\n",
+       "      <td>06</td>\n",
+       "      <td>073</td>\n",
+       "      <td>18506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>21712</td>\n",
+       "      <td>El Cajon city, San Diego County, California, P...</td>\n",
+       "      <td>103679</td>\n",
+       "      <td>06</td>\n",
+       "      <td>073</td>\n",
+       "      <td>21712</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PLACE                                            GEONAME     POP state  \\\n",
+       "0  11194  Carlsbad city, San Diego County, California, P...  113453    06   \n",
+       "1  13392  Chula Vista city, San Diego County, California...  265757    06   \n",
+       "2  16378  Coronado city, San Diego County, California, P...   24812    06   \n",
+       "3  18506  Del Mar city, San Diego County, California, Pa...    4351    06   \n",
+       "4  21712  El Cajon city, San Diego County, California, P...  103679    06   \n",
+       "\n",
+       "  county  place  \n",
+       "0    073  11194  \n",
+       "1    073  13392  \n",
+       "2    073  16378  \n",
+       "3    073  18506  \n",
+       "4    073  21712  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = ds.fetch_dataframe('PLACE', 'GEONAME', 'POP', geo_in='state:06+county:073', geo_for='place:*')\n",
+    "df.head()"
    ]
   },
   {
